# vers

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: label.yml  rust.yml
src/: changelog.rs  cli.rs  cli.yml  error.rs  git.rs  lib.rs  main.rs  npm.rs  version.rs
src/cli/: commit.rs  info.rs  mod.rs  version.rs
