[package]
name = "vers"
version = "0.2.0"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2021"

publish = false
description = "CLI utility to change package version in JavaScript projects"

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
chrono = "0.4.26"
terminal-spinners = "0.3.2"
colored = "2.0.4"

[lib]
name = "vers"
path = "src/lib.rs"
