[package]
name = "vers"
version = "0.2.0"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2021"

publish = false
description = "CLI utility to change package version in JavaScript projects"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "deprecated"] }
chrono = "0.4.39"
terminal-spinners = "0.3.2"
colored = "2.1.0"

[lib]
name = "vers"
path = "src/lib.rs"
